--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+@ -1,138 +0,0 @@
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,7 +11,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <style>
-    /* :root {
+     :root {
     --acent-color: #45517D;
     --main-color:  #61B2EC;
     --add-color: #8EC9F2;
@@ -68,7 +69,7 @@
     width: 100px;
     height: 50px;
     margin-left: 30%;
-} */
+} 
 </style>
 
 <body>
